# clickhouse-sqlalchemy

./: Makefile  docker-compose.yaml  pyproject.toml  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: actions.yml  docs.yml  sa-versions.yml
clickhouse_sqlalchemy/drivers/compilers/: sqlcompiler.py
clickhouse_sqlalchemy/engines/: mergetree.py
clickhouse_sqlalchemy/types/: common.py
docs/: Makefile  conf.py
src/clickhouse_sqlalchemy/: __init__.py  exceptions.py
src/clickhouse_sqlalchemy/alembic/: comparators.py  dialect.py  operations.py  renderers.py  toimpl.py
src/clickhouse_sqlalchemy/drivers/: base.py  reflection.py  util.py
src/clickhouse_sqlalchemy/drivers/asynch/: base.py  connector.py
src/clickhouse_sqlalchemy/drivers/compilers/: ddlcompiler.py  sqlcompiler.py  typecompiler.py
src/clickhouse_sqlalchemy/drivers/http/: base.py  connector.py  escaper.py  transport.py  utils.py
src/clickhouse_sqlalchemy/drivers/native/: base.py  connector.py
src/clickhouse_sqlalchemy/engines/: __init__.py  base.py  mergetree.py  misc.py  replicated.py  util.py
src/clickhouse_sqlalchemy/ext/: clauses.py  declarative.py
src/clickhouse_sqlalchemy/orm/: __init__.py  query.py  session.py
src/clickhouse_sqlalchemy/sql/: __init__.py  ddl.py  functions.py  schema.py  selectable.py
src/clickhouse_sqlalchemy/types/: __init__.py  common.py  ip.py  nested.py
tests/: config.py  log.py  session.py  test_compiler.py  test_ddl.py  test_reflection.py  testcase.py  util.py
tests/alembic/: test_default_schema_comparators.py
tests/drivers/: test_clickhouse_dialect.py  test_util.py
tests/drivers/asynch/: test_base.py  test_cursor.py  test_insert.py  test_select.py
tests/drivers/http/: test_cursor.py  test_escaping.py  test_select.py  test_stream.py  test_transport.py  test_utils.py
tests/drivers/native/: test_base.py  test_cursor.py  test_insert.py  test_select.py
tests/engines/: test_compilation.py  test_parse_columns.py  test_reflection.py
tests/ext/: test_declative.py
tests/functions/: test_count.py  test_extract.py  test_has.py  test_if.py
tests/orm/: test_select.py
tests/sql/: test_case.py  test_delete.py  test_functions.py  test_ilike.py  test_insert.py  test_is_distinct_from.py  test_lambda.py  test_limit.py  test_regexp_match.py  test_schema.py  test_selectable.py  test_update.py
tests/types/: test_boolean.py  test_date32.py  test_datetime.py  test_datetime64.py  test_enum16.py  test_enum8.py  test_int128.py  test_int256.py  test_ip.py  test_json.py  test_numeric.py
