[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "clickhouse-sqlalchemy"
version = "0.3.2"
readme = { file = "README.rst", content-type = "text/x-rst" }
description = "Simple ClickHouse SQLAlchemy Dialect"
requires-python = ">=3.9,<4"
license = { text = "MIT" }

authors = [
    { name = "Konstantin Lebedev", email = "kostyan.lebedev@gmail.com" },
    { name = "Michele Zanotti", email = "m.zanotti@nebuly.ai" }
]

maintainers = [
    { name = "Michele Zanotti", email = "m.zanotti@nebuly.ai" }
]

keywords = [
    "ClickHouse",
    "db",
    "database",
    "cloud",
    "analytics"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

dependencies = [
    "sqlalchemy>=2.0.0,<2.1.0",
    "clickhouse-driver>=0.1.2",
    "asynch>=0.2.2,<0.4.0",
]

[project.urls]
Homepage = "https://github.com/xzkostyan/clickhouse-sqlalchemy"
Documentation = "https://clickhouse-sqlalchemy.readthedocs.io"
Changes = "https://github.com/xzkostyan/clickhouse-sqlalchemy/blob/master/CHANGELOG.md"

# SQLAlchemy dialect entry points
[project.entry-points."sqlalchemy.dialects"]
"clickhouse" = "clickhouse_sqlalchemy.drivers.http.base:ClickHouseDialect_http"
"clickhouse.http" = "clickhouse_sqlalchemy.drivers.http.base:ClickHouseDialect_http"
"clickhouse.native" = "clickhouse_sqlalchemy.drivers.native.base:ClickHouseDialect_native"
"clickhouse.asynch" = "clickhouse_sqlalchemy.drivers.asynch.base:ClickHouseDialect_asynch"

[dependency-groups]
dev = [
    "alembic>=1.16.5",
    "coverage>=7.10.6",
    "greenlet>=3.2.4",
    "parameterized>=0.9.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "responses>=0.25.8",
    "sphinx>=7.4.7",
]
